--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <link rel="stylesheet" href="css/app.css">
+
+    <script>
+    body{
+        background-color:#ffff
+    }
+    </script>
 </head>
 <body>
 
